@@ -1,3 +1,7 @@
+2015-10-11  Jan Hubicka  <hubicka@ucw.cz>
+
+	* gcc.c-torture/compile/icfmatch.c: Add testcase
+
 2015-10-16  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/67926
